Spring: Flux: add ErrorCodeTest